# sentinel-ai-platform

./: .gitignore  README.md  pyproject.toml
configs/training/: baseline.yaml
docs/architechture/: repository-structure.md
docs/architecture/: dependency-management.md  repository-structure.md
src/sentinel/config/: loader.py  models.py
tests/unit/: test_package_import.py
tests/unit/config/: test_config_loader.py
